testsuite/tests/rename/should_fail/T9177.stderr

T9177.hs:4:1: error: [GHC-76037]
    Not in scope: type variable ‘int’
    Suggested fix:
      Perhaps use type constructor or class ‘Int’ (imported from Prelude)

T9177.hs:7:1: error: [GHC-76037]
    Not in scope: type variable ‘integerr’
    Suggested fix:
      Perhaps use type constructor or class ‘Integer’ (imported from Prelude)

T9177.hs:17:6: error: [GHC-76037]
    Not in scope: data constructor ‘Fun’
